boost.python modules can successfully import into Python now

--- a/cpp/makefile
+++ b/cpp/makefile
@@ -1,8 +1,70 @@
+SHELL = bash
+
+TARGET = audio_decode
 BUILD_DIR = build
 VENV_DIR = ../env
+DEBUG = 1
 
-all:
-	CC=g++ python3 setup.py install
+OPT = -O0
+OS = linux
+
+ifeq ($(OS), linux)
+	CC = g++ -std=c++17
+else ifeq ($(OS), macos)
+	CC = g++-11 -std=c++17
+endif
+
+CP = objcopy
+SZ = size
+
+CPP_SOURCES = $(wildcard src/*.cpp)
+
+CPP_INCLUDES = \
+-I inc \
+-I /usr/local/include \
+-I /usr/include/python3.8
+
+CPP_FLAGS = $(CPP_INCLUDES) $(OPT) -fPIC -Wall -MMD -MP -MF"$(@:%.o=%.d)"
+
+ifeq ($(DEBUG), 1)
+	CPP_FLAGS += -ggdb
+endif
+
+BOOST_PY_VER = 38
+BOOST_LIB = /usr/lib/x86_64-linux-gnu
+
+PY_VER = 3.8
+PY_LIB = /usr/lib/python$(PY_VER)
+
+LIBS = \
+-l boost_python$(BOOST_PY_VER) \
+-l python$(PY_VER)
+# -L /usr/include/boost/python -l boost_python-3.8
+
+OBJECTS = $(addprefix $(BUILD_DIR)/,$(notdir $(CPP_SOURCES:.cpp=.o)))
+vpath %.cpp $(sort $(dir $(CPP_SOURCES)))
+
+all: binaries install
+
+binaries: $(BUILD_DIR)/$(TARGET).so
+
+$(BUILD_DIR)/$(TARGET).so: $(OBJECTS) | $(BUILD_DIR)
+	@echo ""
+	$(CC) -shared $(OBJECTS) $(LIBS) -o $@
+	@echo ""
+	@$(SZ) $@
+	@echo ""
+
+$(BUILD_DIR)/%.o: ./src/%.cpp | $(BUILD_DIR)
+	$(CC) -c $(CPP_FLAGS) $< -o $@
+
+$(BUILD_DIR):
+	mkdir $@
+	@echo ""
+
+install:
+	cp $(BUILD_DIR)/$(TARGET).so $(VENV_DIR)/lib/python$(PY_VER)/site-packages
 
 clean:
 	rm -rf $(BUILD_DIR)
+	rm $(VENV_DIR)/lib/python$(PY_VER)/site-packages/$(TARGET).so
